--- a/boot-server/pom.xml
+++ b/boot-server/pom.xml
@@ -55,6 +55,8 @@
 					<filesets>
 						<fileset>
 							<directory>src/main/resources/static</directory>
+						</fileset>
+						<fileset>
 							<directory>src/main/resources/templates</directory>
 						</fileset>
 					</filesets>
